# ATS-Trading-Ai

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  repo-tree.txt  run.py  run_backtest.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml
ats/: __init__.py  backtest_dashboard.ipynb  orchestrator.py  orchestrator_facade.py  types.py
ats/adaptation/: __init__.py  feedback_loop.py  meta_allocator.py  regime_adapter.py  reputation_engine.py
ats/aggregator/: __init__.py  aggregator.py  allocation_engine.py  position_sizer.py
ats/analyst/: __init__.py  analyst_dispatcher.py  analyst_engine.py  feature_engine.py  feature_schema.py  features.py  loader.py  registry.py  strategy_api.py  strategy_base.py  strategy_errors.py  strategy_manager.py
ats/backtester/: __init__.py  backtester.py  data_loader_benzinga.py  data_loader_polygon.py  event_queue.py  execution_context.py
ats/backtester2/: __init__.py  artifacts.py  backtest_config.py  backtest_runner.py  backtester_engine.py  bt_contracts.py  bt_debug_snapshot.py  bt_reporter.py  bt_sanity.py  bt_trace.py  bt_validation.py  context.py  data_loader.py  data_sources.py  data_window.py  engine.py  ensemble_strategy.py  execution_bridge.py  execution_engine.py  execution_sim.py  execution_simulator.py  fill_processor.py  interfaces.py  kill_switch.py  latency_model.py  ledger.py  live_bindings.py  loader.py  metrics.py  order_book.py  order_builder.py  pipeline.py  portfolio.py  portfolio_sim.py  portfolio_simulator.py  portfolio_snapshot.py  portfolio_sync.py  position_book.py  position_book_bt.py  position_intent.py  (+15 more)
ats/config/: config_loader.py
ats/core/: clock.py  config.py  kill_switch.py  logging.py  (+1 more)
tests/: conftest.py  test_ats_run_pipeline.py  test_backtester2_cli.py  test_backtester2_csv_source.py  test_backtester2_ensemble.py  test_backtester2_metrics.py  test_imports.py  test_kill_switch.py  test_live_runner.py  test_risk_invariants.py
tools/: install_ripgrep.sh
(+173 files in other folders)
