[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ats-trading-ai"
version = "0.1.0"
description = "Autonomous trading system"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "Proprietary" }
authors = [{ name = "Timothy Fallon" }]

dependencies = [
  "numpy",
  "pandas",
  "pyyaml",
  "requests",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
  "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = [".venv", "logs", "tests", "backtest_output"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
# For now, only error codes, and ignore import-position + long-line noise.
select = ["E"]
ignore = ["E402", "E501"]
exclude = [
  ".git",
  ".venv",
  "venv",
  "build",
  "dist",
  "__pycache__",
  "ats/backtester2",  # exclude the big WIP backtester2 tree from lint for now
]
 
[tool.pytest.ini_options]
addopts = "-q --import-mode=importlib"
pythonpath = ["."]
